--- a/package.json
+++ b/package.json
@@ -3,7 +3,15 @@
   "bugs": {
     "url": "https://github.com/tallesl/from-family/issues"
   },
+  "dependencies": {
+    "is-integer": "^1.0.4"
+  },
   "description": "checks the family of a HTTP status code",
+  "devDependencies": {
+    "coveralls": "^2.11.3",
+    "istanbul": "^0.3.17",
+    "mocha": "^2.2.5"
+  },
   "homepage": "https://github.com/tallesl/from-family",
   "keywords": [
     "check",
@@ -28,13 +36,5 @@
   "scripts": {
     "test": "mocha"
   },
-  "version": "1.0.1",
-  "devDependencies": {
-    "coveralls": "^2.11.3",
-    "istanbul": "^0.3.17",
-    "mocha": "^2.2.5"
-  },
-  "dependencies": {
-    "is-integer": "^1.0.4"
-  }
+  "version": "1.1.0"
 }
